--- a/app/Astronomy_Solar_system_simulator/index.html
+++ b/app/Astronomy_Solar_system_simulator/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="description" content="Simulate the planetary trajectory, autobiography, revolution, etc. of the solar system.">
+  <meta name="keywords" content="Solar System, Simulator, Physics, MPC Lab, MathPhysChemLab">
+  <meta name="author" content="MPC Lab">
   <title>Astronomy Solar system simulator | MathPhysChemLab</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
