--- a/app/Multi_Variable_Linear_Equation_Calculator/index.html
+++ b/app/Multi_Variable_Linear_Equation_Calculator/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Calculator for calculating Multi Variable Linear Equation step by step.">
+    <meta name="keywords" content="Multi Variable Linear Equation, Calculator, Math, MPC Lab, MathPhysChemLab">
+    <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
