--- a/app/Basic_Geometry_Calculator/index.html
+++ b/app/Basic_Geometry_Calculator/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A powerful geometric calculator that supports many geometric figures and calculation methods.">
+    <meta name="keywords" content="Geometry, Calculator, Math, MPC Lab, MathPhysChemLab">
+    <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
