--- a/account/index.html
+++ b/account/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
+    <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
+    <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/png" href="../static/img/logo_s.png">
     <link rel="stylesheet" href="../static/css/loading_motion.css">
     <link rel="stylesheet" href="../static/css/account.css">
