--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="description" content="Star trajectory simulator for astronomical three-star system.">
+  <meta name="keywords" content="Three-star system, Three-body problem, Simulator, Physics, MPC Lab, MathPhysChemLab">
+  <meta name="author" content="MPC Lab">
   <title>Three-Body Motion Simulator</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
