--- a/app/Basic_Mechanics_Calculator/index.html
+++ b/app/Basic_Mechanics_Calculator/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculate the addition, subtraction, multiplication and division of two 3*3 matrices.">
-    <meta name="keywords" content="Machanics, Calculator, Math, MPC Lab, MathPhysChemLab">
+    <meta name="description" content="Calculator for Newtonian mechanics.">
+    <meta name="keywords" content="Machanics, Calculator, Physics, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
