--- a/app/x/index.html
+++ b/app/x/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Powerful question generator covering mathematics, physics and chemistry in elementary school, middle school and university. Arrange tasks/PDF printing with one click.">
+    <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
+    <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
