--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="./static/img/logo_s.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
+    <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
+    <meta name="author" content="MPC Lab">
     <link rel="stylesheet" href="./static/css/loading_motion.css">
     <link rel="stylesheet" href="./static/css/styles.css">
     <link rel="stylesheet" media="(min-width: 1000px)" href="./static/css/desktop.css">
