--- a/index.html
+++ b/index.html
@@ -25,6 +25,98 @@
     <script type="text/javascript" src="./static/js/user.js"></script>
     <script type="text/javascript" src="./static/js/Analytics.js"></script>
     <script type="text/javascript" src="./static/js/AsSense.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://app.mathscichem.com",
+            "@type": "ItemList",
+            "itemListElement": [
+              {
+                "@type": "ListItem",
+                "position": "1",
+                "item": {
+                  "@type": "Tool",
+                  "url": "https://app.mathscichem.com/app/x/",
+                  "name": "QuizMatic Pro",
+                  "image": "https://app.mathscichem.com/static/img/app/x.png",
+                    "Type": {
+                      "@type": "Tags",
+                      "types": ["Math", "Physics", "Chemistry"]
+                  }
+                }
+                },
+                {
+                    "@type": "ListItem",
+                    "position": "2",
+                    "item": {
+                      "@type": "Tool",
+                      "url": "https://app.mathscichem.com/Three-Body/",
+                      "name": "Astronomy Three-Body Simulator",
+                      "image": "https://app.mathscichem.com/static/img/app/Three-Body.png",
+                        "Type": {
+                          "@type": "Tags",
+                          "types": ["Physics"]
+                }
+                }
+                },
+                {
+                    "@type": "ListItem",
+                    "position": "3",
+                    "item": {
+                      "@type": "Tool",
+                      "url": "https://app.mathscichem.com/app/Statistics_Calculator/",
+                      "name": "Statistics Calculator",
+                      "image": "https://app.mathscichem.com/static/img/app/Statistics_Calculator.jpg",
+                        "Type": {
+                          "@type": "Tags",
+                          "types": ["Math"]
+                }
+                }
+                },
+                {
+                    "@type": "ListItem",
+                    "position": "4",
+                    "item": {
+                      "@type": "Tool",
+                      "url": "https://app.mathscichem.com/app/Quadratic_Equation_Calculator/",
+                      "name": "Quadratic Equation Calculator",
+                      "image": "https://app.mathscichem.com/static/img/app/Quadratic_Equation_Calculator.jpg",
+                        "Type": {
+                          "@type": "Tags",
+                          "types": ["Math"]
+                }
+                }
+                },
+                {
+                    "@type": "ListItem",
+                    "position": "5",
+                    "item": {
+                      "@type": "Tool",
+                      "url": "https://app.mathscichem.com/app/Two_Variable_Linear_Equation_Calculator/",
+                      "name": "Two Variable Linear Equation Calculator",
+                      "image": "https://app.mathscichem.com/static/img/app/Two_Variable_Linear_Equation_Calculator.jpg",
+                        "Type": {
+                          "@type": "Tags",
+                          "types": ["Math"]
+                }
+                }
+                },
+                {
+                    "@type": "ListItem",
+                    "position": "6",
+                    "item": {
+                      "@type": "Tool",
+                      "url": "https://app.mathscichem.com/app/Three_Variable_Linear_Equation_Calculator/",
+                      "name": "Three Variable Linear Equation Calculator",
+                      "image": "https://app.mathscichem.com/static/img/app/Three_Variable_Linear_Equation_Calculator.jpg",
+                        "Type": {
+                          "@type": "Tags",
+                          "types": ["Math"]
+                }
+                }
+                },
+            ]
+        }
+        </script>
     <title>MathPhysChemLab</title>
 </head>
 
