--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
                   "@type": "Tool",
                   "url": "https://app.mathscichem.com/app/x/",
                   "name": "QuizMatic Pro",
-                  "image": "https://app.mathscichem.com/static/img/app/x.png",
-                    "Type": {
-                      "@type": "Tags",
-                      "types": ["Math", "Physics", "Chemistry"]
-                  }
+                  "image": "https://app.mathscichem.com/static/img/app/x.png"
                 }
                 },
                 {
@@ -51,11 +47,7 @@
                       "@type": "Tool",
                       "url": "https://app.mathscichem.com/Three-Body/",
                       "name": "Astronomy Three-Body Simulator",
-                      "image": "https://app.mathscichem.com/static/img/app/Three-Body.png",
-                        "Type": {
-                          "@type": "Tags",
-                          "types": ["Physics"]
-                }
+                      "image": "https://app.mathscichem.com/static/img/app/Three-Body.png"
                 }
                 },
                 {
@@ -65,11 +57,7 @@
                       "@type": "Tool",
                       "url": "https://app.mathscichem.com/app/Statistics_Calculator/",
                       "name": "Statistics Calculator",
-                      "image": "https://app.mathscichem.com/static/img/app/Statistics_Calculator.jpg",
-                        "Type": {
-                          "@type": "Tags",
-                          "types": ["Math"]
-                }
+                      "image": "https://app.mathscichem.com/static/img/app/Statistics_Calculator.jpg"
                 }
                 },
                 {
@@ -79,11 +67,7 @@
                       "@type": "Tool",
                       "url": "https://app.mathscichem.com/app/Quadratic_Equation_Calculator/",
                       "name": "Quadratic Equation Calculator",
-                      "image": "https://app.mathscichem.com/static/img/app/Quadratic_Equation_Calculator.jpg",
-                        "Type": {
-                          "@type": "Tags",
-                          "types": ["Math"]
-                }
+                      "image": "https://app.mathscichem.com/static/img/app/Quadratic_Equation_Calculator.jpg"
                 }
                 },
                 {
@@ -93,11 +77,7 @@
                       "@type": "Tool",
                       "url": "https://app.mathscichem.com/app/Two_Variable_Linear_Equation_Calculator/",
                       "name": "Two Variable Linear Equation Calculator",
-                      "image": "https://app.mathscichem.com/static/img/app/Two_Variable_Linear_Equation_Calculator.jpg",
-                        "Type": {
-                          "@type": "Tags",
-                          "types": ["Math"]
-                }
+                      "image": "https://app.mathscichem.com/static/img/app/Two_Variable_Linear_Equation_Calculator.jpg"
                 }
                 },
                 {
@@ -107,11 +87,7 @@
                       "@type": "Tool",
                       "url": "https://app.mathscichem.com/app/Three_Variable_Linear_Equation_Calculator/",
                       "name": "Three Variable Linear Equation Calculator",
-                      "image": "https://app.mathscichem.com/static/img/app/Three_Variable_Linear_Equation_Calculator.jpg",
-                        "Type": {
-                          "@type": "Tags",
-                          "types": ["Math"]
-                }
+                      "image": "https://app.mathscichem.com/static/img/app/Three_Variable_Linear_Equation_Calculator.jpg"
                 }
                 },
             ]
