--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Star trajectory simulator for astronomical three-star system.">
   <meta name="keywords" content="Three-star system, Three-body problem, Simulator, Physics, MPC Lab, MathPhysChemLab">
   <meta name="author" content="MPC Lab">
-  <title>Three-Body Motion Simulator</title>
+  <title>Three-Body Motion Simulator | MathPhysChemLab</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
