--- a/app/x/index.html
+++ b/app/x/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Powerful question generator covering mathematics, physics and chemistry in elementary school, middle school and university. Arrange tasks/PDF printing with one click.">
+    <meta name="description"
+        content="Powerful question generator covering mathematics, physics and chemistry in elementary school, middle school and university. Arrange tasks/PDF printing with one click.">
     <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
@@ -30,8 +31,8 @@
     <script type="text/javascript" src="../../static/js/server.js"></script>
     <script type="text/javascript" src="../../static/js/user.js"></script>
     <script type="text/javascript" src="../../static/apps/js/x.js"></script>
-    <script type="text/javascript" src="./data/main.js"></script>
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="../../app/x/data/main.js"></script>
+    <script type="text/javascript" src="../../app/x/script.js"></script>
     <script type="text/javascript" src="../../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../../static/js/AsSense.js"></script>
     <title>QuizMatic Pro | MathPhysChemLab</title>
