--- a/Three-Body/index.html
+++ b/Three-Body/index.html
@@ -57,6 +57,11 @@
   </header>
 
   <main>
+    <div id="container" class="container"></div>
+    <script>
+      //Start Page
+      Operate.newPage();
+    </script>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
