--- a/app/Astronomy_Solar_system_simulator/index.html
+++ b/app/Astronomy_Solar_system_simulator/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="Simulate the planetary trajectory, autobiography, revolution, etc. of the solar system.">
+  <meta name="description"
+    content="Simulate the planetary trajectory, autobiography, revolution, etc. of the solar system.">
   <meta name="keywords" content="Solar System, Simulator, Physics, MPC Lab, MathPhysChemLab">
   <meta name="author" content="MPC Lab">
   <title>Astronomy Solar system simulator | MathPhysChemLab</title>
@@ -57,6 +58,11 @@
   </header>
 
   <main>
+    <div id="container" class="container"></div>
+    <script>
+      //Start Page
+      Operate.newPage();
+    </script>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
