--- a/app/Astronomy_Solar_system_simulator/index.html
+++ b/app/Astronomy_Solar_system_simulator/index.html
@@ -61,6 +61,7 @@
     <div id="container" class="container"></div>
     <script>
       //Start Page
+      div_container = document.getElementById("container");
       Operate.newPage();
     </script>
     <div id="unity-container" class="unity-desktop">
