--- a/account/resetPassword.html
+++ b/account/resetPassword.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
     <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
-    <link rel="icon" type="image/png" href="../static/img/logo_s.png">
+    <link rel="icon" type="image/ico" href="../favicon.ico">
     <link rel="stylesheet" href="../static/css/loading_motion.css">
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" media="(min-width: 1000px)" href="../static/css/desktop.css">
