--- a/app/x/index.html
+++ b/app/x/index.html
@@ -8,7 +8,7 @@
         content="Powerful question generator covering mathematics, physics and chemistry in elementary school, middle school and university. Arrange tasks/PDF printing with one click.">
     <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
-    <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
+    <link rel="icon" type="image/ico" href="../../favicon.ico">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
     <link rel="stylesheet" media="(min-width: 1000px)" href="../../static/css/desktop.css">
