--- a/app/Statistics_Calculator/index.html
+++ b/app/Statistics_Calculator/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Powerful statistical calculator to calculate a variety of statistical distributions.">
     <meta name="keywords" content="Statistics, Calculator, Math, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
-    <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
+    <link rel="icon" type="image/ico" href="../../favicon.ico">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
     <link rel="stylesheet" media="(min-width: 1000px)" href="../../static/css/desktop.css">
