--- a/app/Three_By_Three_Matrix_Calculator/index.html
+++ b/app/Three_By_Three_Matrix_Calculator/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Calculate 3*3 matrix addition, subtraction, multiplication and division.">
     <meta name="keywords" content="Matrix, Calculator, Math, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
-    <link rel="icon" type="image/png" href="../../static/img/logo_s.png">
+    <link rel="icon" type="image/ico" href="../../favicon.ico">
     <link rel="stylesheet" href="../../static/css/loading_motion.css">
     <link rel="stylesheet" href="../../static/css/styles.css">
     <link rel="stylesheet" media="(min-width: 1000px)" href="../../static/css/desktop.css">
