--- a/class/index.html
+++ b/class/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="../static/img/logo_s.png">
+    <link rel="icon" type="image/ico" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
     <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
