--- a/account/index.html
+++ b/account/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
+    <meta name="description"
+        content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
     <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
     <link rel="icon" type="image/ico" href="../favicon.ico">
@@ -66,9 +67,9 @@
         <div id="container" class="container">
             <div class="account-block account-side" onclick="window.location='../likes/'">My Likes</div>
         </div>
-        <div id="container" class="container">
+        <!--<div id="container" class="container">
             <div class="account-block account-side" onclick="window.location='../friends/'">Friends</div>
-        </div>
+        </div>-->
         <div id="container" class="container">
             <div class="account-block account-side" onclick="window.location='../setting/'">Setting</div>
         </div>
