--- a/test/index.html
+++ b/test/index.html
@@ -57,8 +57,7 @@
         <div class="test" id="test">
 
         </div>
-        <div class="pre-test" id="pre_test">
-
+        <div class="container pre-test" id="pre_test">
         </div>
     </main>
 
