--- a/test/index.html
+++ b/test/index.html
@@ -57,7 +57,7 @@
         <div class="test" id="test">
 
         </div>
-        <div class="container pre-test" id="pre_test">
+        <div class="flow-element full-line pre-test" id="pre_test">
         </div>
     </main>
 
