--- a/test/index.html
+++ b/test/index.html
@@ -55,7 +55,17 @@
     <!-- Main Content -->
     <main>
         <div class="test" id="test">
-
+            <div class="test-top-bar">
+                <div id="test-on">
+                    0 of 0
+                </div>
+                <div id="test-time">
+                    00:00:00
+                </div>
+            </div>
+            <div>
+                
+            </div>
         </div>
         <div class="flow-element full-line pre-test" id="pre_test">
         </div>
