--- a/test/index.html
+++ b/test/index.html
@@ -62,6 +62,9 @@
                 <div id="test-time">
                     00:00:00
                 </div>
+                <div id="test-time">
+                    00:00:00
+                </div>
             </div>
             <div>
                 
