--- a/test/index.html
+++ b/test/index.html
@@ -63,8 +63,11 @@
                     00:00:00
                 </div>
             </div>
-            <div>
-                
+            <div id="test-qustions">
+
+            </div>
+            <div class="test-bottom-bar">
+                <button id="next_button">Next</button>
             </div>
         </div>
         <div class="flow-element full-line pre-test" id="pre_test">
