--- a/test/index.html
+++ b/test/index.html
@@ -64,8 +64,8 @@
                 </div>
             </div>
             <div id="test-qustions">
-
             </div>
+            <br><input type="text" id="test-input">
             <div class="test-bottom-bar">
                 <button id="next_button">Next</button>
             </div>
