--- a/test/index.html
+++ b/test/index.html
@@ -63,9 +63,10 @@
                     00:00:00
                 </div>
             </div>
-            <div id="test-qustions">
+            <div class="test-qustions">
+                <div id="test-qustions"></div>
+                <br><input type="text" id="test-input">
             </div>
-            <br><input type="text" id="test-input">
             <div class="test-bottom-bar">
                 <button id="next_button">Next</button>
             </div>
