--- a/search/index.html
+++ b/search/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/ico" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
+    <meta name="description"
+        content="Learning/education community for Mathematics, Physics and Chemistry. Assign tasks, generate exams, and homework. Various professional calculation tools.">
     <meta name="keywords" content="Question generator, Math, Physics, Chemistry, MPC Lab, MathPhysChemLab">
     <meta name="author" content="MPC Lab">
     <link rel="stylesheet" href="../static/css/loading_motion.css">
@@ -25,6 +26,7 @@
     <script type="text/javascript" src="../static/js/user.js"></script>
     <script type="text/javascript" src="../static/js/Analytics.js"></script>
     <script type="text/javascript" src="../static/js/AsSense.js"></script>
+    <script type="text/javascript" src="./search.js"></script>
     <title>Search | MathPhysChemLab</title>
 </head>
 
