--- a/search/index.html
+++ b/search/index.html
@@ -51,7 +51,12 @@
     <!-- Main Content -->
     <main>
         <div id="container" class="container">
+            <div class="flow-element search_bar">
+                <input id="search_bar">
+            </div>
+            <div id="result">
 
+            </div>
         </div>
     </main>
 
