--- a/search/index.html
+++ b/search/index.html
@@ -52,7 +52,7 @@
     <!-- Main Content -->
     <main>
         <div id="container" class="container">
-            <div class="flow-element search_bar">
+            <div class="flow-element search_bar full-line">
                 <input id="search_bar">
             </div>
             <div id="result">
